maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: ';' expected but ')' found.
      var num = _C(it)/10000).toInt
                            ^